Add README, rename directories

--- a/project/templates/aboutus_content.html
+++ b/project/templates/aboutus_content.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/aboutus.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/aboutus.css') }}">
 </head>
 
 <body id="bodystyle">
@@ -21,7 +21,7 @@
             <h2 class="head2">Founder</h2>
             <!-- Founder Content -->
             <div>
-                <img class="caption" src="{{ url_for('static', filename='images/aboutus/founder.jpg') }}" alt="Founder" />
+                <img class="caption" src="{{ url_for('static', filename='img/aboutus/founder.jpg') }}" alt="Founder" />
                 <!-- <img class="caption" src="../assets/pics/aboutus/founder.jpg" alt="Founder" /> -->
                 <p>
                     Để hình thành và phát triển một dự án thì sự góp phần của người chủ tịch là vô cùng quan trọng. Ngày hôm nay, hãy cùng theo chân chúng mình tìm hiểu về người thủ lĩnh của Eco Smart Vietnam - anh Bùi Đình Trí thông qua phần phỏng vấn nho nhỏ dưới đây,
