--- a/project/templates/animation.html
+++ b/project/templates/animation.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/animation.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/animation.css') }}">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                 <input type="radio" name="radio-btn" id="radio4">
 
                 <div class="st first">
-                    <img src="{{ url_for('static', filename='images/aboutus/aware1.jpg') }}" alt="Awareness1" />
+                    <img src="{{ url_for('static', filename='img/aboutus/aware1.jpg') }}" alt="Awareness1" />
                     <div class="animation-content">
                         <p>In 10 centuries, a new plastic bottle will decompose.</p>
                         <p>100 years from now, 1 plastic bag will leave this earth.</p>
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="st">
-                    <img src="{{ url_for('static', filename='images/aboutus/aware2.jpg') }}" alt="Awareness 2">
+                    <img src="{{ url_for('static', filename='img/aboutus/aware2.jpg') }}" alt="Awareness 2">
                     <div class="animation-content">
                         <p>If now, inaction, then when?</p>
                         <p>A few years later, when that pile of garbage has not yet decomposed, will humanity eat on the garbage heap, sleep on the garbage pile, and drown in the ocean of garbage?</p>
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="st">
-                    <img src="{{ url_for('static', filename='images/aboutus/mission.jpg') }}" alt="Mission">
+                    <img src="{{ url_for('static', filename='img/aboutus/mission.jpg') }}" alt="Mission">
                     <div class="animation-content">
                         <p>Eco Smart VietNam is committed to 2 main MISSIONS and VISIONS:</p>
                         <p>- Raising Vietnamese awareness of environmental protection activities</p>
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="st">
-                    <img src="{{ url_for('static', filename='images/aboutus/history.jpg') }}" alt="Vision">
+                    <img src="{{ url_for('static', filename='img/aboutus/history.jpg') }}" alt="Vision">
                     <div class="animation-content">
                         <p>With those things, ECO SMART VIETNAM was born.</p>
                         <p>In 2022-2024, Eco Smart VietNam operates with the vision of becoming one of the leading active student organizations in the North acting for the environment. In particular, ESV is a pioneer in promoting the development of environmentally
