--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -7,14 +7,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/navbar.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/activities.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/aboutus.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/slideshow.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/footer.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/activities.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/aboutus.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/slideshow.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}" />
     <title>Eco Smart Vietnam</title>
     <!-- add icon link -->
-    <link rel="icon" href="{{ url_for('static', filename='images/aboutus/logo.png') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='img/aboutus/logo.png') }}" type="image/x-icon">
 </head>
 
 <body>
