--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -19,7 +19,7 @@
     />
 
     <!-- CSS stylesheet -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/navbar.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -39,7 +39,7 @@
         <a href="/" class="navbar-brand">
           <!-- The logo is inline with the title but also the width and height of the logo is changeable-->
           <img
-            src="{{ url_for('static', filename='images/aboutus/logo.png') }}"
+            src="{{ url_for('static', filename='img/aboutus/logo.png') }}"
             alt="Logo"
             class="title-logo d-inline-block"
             
