--- a/project/templates/button.html
+++ b/project/templates/button.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Button</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/button.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/button.css') }}">
 </head>
 
 <body>
