--- a/project/templates/contactus.html
+++ b/project/templates/contactus.html
@@ -7,7 +7,7 @@
     <title>Contact Us</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='style/contactus.css')}}"
+      href="{{ url_for('static', filename='css/contactus.css')}}"
     />
 
     <script
@@ -22,7 +22,7 @@
     </script>
 
     <script
-      src="{{ url_for('static', filename='JS/contactus.js')}}"
+      src="{{ url_for('static', filename='js/contactus.js')}}"
       type="text/javascript"
     ></script>
   </head>
