--- a/project/templates/contactus.html
+++ b/project/templates/contactus.html
@@ -22,7 +22,7 @@
     </script>
 
     <script
-      src="{{ url_for('static', filename='javascript/contactus.js')}}"
+      src="{{ url_for('static', filename='js/contactus.js')}}"
       type="text/javascript"
     ></script>
   </head>
