--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -19,7 +19,10 @@
     />
 
     <!-- CSS stylesheet -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/navbar.css') }}"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -42,7 +45,6 @@
             src="{{ url_for('static', filename='img/aboutus/logo.png') }}"
             alt="Logo"
             class="title-logo d-inline-block"
-            
           />
         </a>
 
@@ -67,9 +69,16 @@
             <li class="nav-item">
               <a class="nav-link active" href="/activities/">Activities</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/about-us/"
                 >About us</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/contact-us/"
+                >Contact Us</a
               >
             </li>
             <li class="nav-item">
