--- a/project/templates/contactus.html
+++ b/project/templates/contactus.html
@@ -27,7 +27,9 @@
     ></script>
   </head>
   <body>
-    <h1 class="title">Eco Smart Vietnam</h1>
+    {% include 'navbar.html' %} 
+    <h1 class="title">Contact us</h1>
+    <h2 class="title"> For any information please contact us through this form!</h2>
 
     <form class="contact-box" id="contact-form">
       <input
@@ -53,5 +55,6 @@
       <br />
       <input type="submit" value="Send" id="send-btn" />
     </form>
+    {% include 'footer.html' %} 
   </body>
 </html>
