About Us Content and Button links update

--- a/project/templates/button.html
+++ b/project/templates/button.html
@@ -11,7 +11,7 @@
     <div class="button-show">
         <a class="button" href="/about-us/">About Us</a>
         <a class="button" href="/activities/">Activities</a>
-        <a class="button" href="/sildeshow/">Animation</a>
+        <a class="button" href="/slideshow/">Slideshow</a>
     </div>
 </body>
 
