Our Team add in About Us (replace Founder in About Us)

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -60,7 +60,8 @@
             </div>
         </main>
     </div>
-    {% include 'footer.html' %}
+    <h2 class="head2">Our Team</h2>
+    {% include 'ourteam.html' %} {% include 'footer.html' %}
 </body>
 
 </html>
