--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -22,7 +22,7 @@
     {% include 'navbar.html' %}
 
     <!-- include body.html here -->
-    {% include 'slideshow.html' %} {% include 'button.html' %} {% include 'activities_content.html' %}
+    {% include 'scrolling.html' %} {% include 'slideshow.html' %} {% include 'button.html' %} {% include 'activities_content.html' %}
     <iframe style="display: block; margin: 50px auto;" width="560" height="315" src="https://www.youtube.com/embed/doeU59yKY78" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
     <div>{% include 'aboutus_content.html' %}</div>
