--- a/project/templates/aboutus_content.html
+++ b/project/templates/aboutus_content.html
@@ -10,22 +10,24 @@
 </head>
 
 <body>
-    <div class="esvabout animated">
-        <video autoplay muted loop id="myVideo">
+    <section id="aboutus-scroll">
+        <div class="esvabout animated">
+            <video autoplay muted loop id="myVideo">
       <source src="{{ url_for('static', filename='img/aboutus/ecobackground.mp4') }}" type="video/mp4">
     </video>
-        <div class="all_text">
-            <div>
-                <h2 id="title">About Eco Smart Vietnam</h2>
-            </div>
-            <hr class="seperate">
-            <div id="detailtext">
-                <h5 class="text1">In 2022-2024, Eco Smart VietNam operates with the vision of becoming one of the leading active student organizations in the North acting for the environment. In particular, ESV is a pioneer in promoting the development of environmentally
-                    friendly products.</h5>
-                <a href="/about-us/" class="text2">Read More</a>
+            <div class="all_text">
+                <div>
+                    <h2 id="title">About Eco Smart Vietnam</h2>
+                </div>
+                <hr class="seperate">
+                <div id="detailtext">
+                    <h5 class="text1">In 2022-2024, Eco Smart VietNam operates with the vision of becoming one of the leading active student organizations in the North acting for the environment. In particular, ESV is a pioneer in promoting the development of environmentally
+                        friendly products.</h5>
+                    <a href="/about-us/" class="text2">Read More</a>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 
 </html>
