--- a/project/templates/scrolling.html
+++ b/project/templates/scrolling.html
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scrolling Button</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/scrolling.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/button.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='js/scrolling.js') }}"></script>
 </head>
 
 <body>
-    <div class="button-show">
-        <a class="button" href="#aboutus-scroll">Read more</a>
+    <div class="button-show-scroll">
+        <a class="button-scroll" href="#aboutus-scroll">Read more</a>
     </div>
 </body>
 
