--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -46,7 +46,7 @@
                     Question 3: Could you share a little about the goals and expectations that you set at Eco Smart Vietnam in the future?
                 </p>
                 <p>
-                    Mr. Tri: As I share, I am a high-dose blood person but in control, so I set goals/expectations that often balance between far-fetched and realistic =))). I really expect Eco Smart Vietnam to become one of the largest and most professional environmental
+                    Mr. Tri: As I share, I am a high-dose blood person but in control, so I set goals/expectations that often balance between far-fetched and realistic. I really expect Eco Smart Vietnam to become one of the largest and most professional environmental
                     organizations in the North. However, in my mind, I think that in the short term, it only needs to be the largest in Hanoi (probably the largest HN is likely to be top 2, top 3 in the North, right? :))
                 </p>
                 <p class="question">
