--- a/project/templates/contactus.html
+++ b/project/templates/contactus.html
@@ -31,37 +31,31 @@
     ></script>
   </head>
   <body>
-    {% include 'navbar.html' %} 
-    <h1 class="title">Contact us</h1>
-    <h2 class="title"> For any information please contact us through this form!</h2>
+    {% include 'navbar.html' %}
 
+    <div class="contact-us-title">
+      <h1 class="title">Contact us</h1>
+      <h2 class="title">
+        For any information please contact us through this form!
+      </h2>
+    </div>
     <form class="contact-box" id="contact-form">
-      <input
-        class="contact-item"
-        type="text"
-        name="from_name"
-        placeholder="Full name"
-        required
-      />
+      <p class="field-name">Full name</p>
+      <input class="contact-item" type="text" name="from_name" required />
       <br />
-      <input
-        class="contact-item"
-        type="email"
-        name="email_id"
-        placeholder="Email"
-        required
-      />
+      <p class="field-name">Email</p>
+      <input class="contact-item" type="email" name="email_id" required />
       <br />
+      <p class="field-name">Message</p>
       <textarea
         class="contact-item"
         name="message"
-        placeholder="Message"
         id="messagebox"
         required
       ></textarea>
       <br />
       <input type="submit" class="button" value="Send" id="send-btn" />
     </form>
-    {% include 'footer.html' %} 
+    {% include 'footer.html' %}
   </body>
 </html>
