--- a/project/templates/contactus.html
+++ b/project/templates/contactus.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
     <link
+      rel="icon"
+      href="{{ url_for('static', filename='img/aboutus/logo.png') }}"
+      type="image/x-icon"
+    />
+
+    <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/contactus.css')}}"
     />
