update contact us page and fix navbar

--- a/project/templates/contactus.html
+++ b/project/templates/contactus.html
@@ -36,7 +36,7 @@
       type="text/javascript"
     ></script>
   </head>
-  <body>
+  <body class = "contact-us-body">
     {% include 'navbar.html' %}
 
     <div class="contact-us-title">
