--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}" />
 <div class="background_footer">
-    <p class="footerstyle">
+    <p class="footer-style">
         All rights reserved by
         <a href="https://www.facebook.com/ecosmartvietnam">ECO SMART VIETNAM</a>
     </p>
