--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -21,11 +21,7 @@
     {% include 'navbar.html' %}
 
     <!-- include body.html here -->
-    {% include 'scrolling.html' %} 
-    {% include 'slideshow.html' %} 
-    {% include 'button.html' %} 
-    {% include 'activities_content.html' %}
-    {% include 'video.html' %}
+    {% include 'scrolling.html' %} {% include 'slideshow.html' %} {% include 'activities_content.html' %} {% include 'video.html' %}
     <div>{% include 'aboutus_content.html' %}</div>
     {% include 'footer.html' %}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OG"></script>
