Executive Team Update

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -29,7 +29,7 @@
             {% include 'animation.html' %}
 
             <div class="mainstyle">
-                <h2 class="head2">Our Team</h2>
+                <h2 class="head2">Executive Board</h2>
                 {% include 'ourteam.html' %}
                 <h2 class="head2">The Story of Eco Smart Vietnam</h2>
                 <!-- Founder Content -->
