--- a/project/templates/ourteam.html
+++ b/project/templates/ourteam.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/ourteam.css') }}">
-    <title>Our Team</title>
+    <title>Executive Board</title>
 </head>
 
 <body>
