--- a/project/templates/activities_content.html
+++ b/project/templates/activities_content.html
@@ -11,9 +11,15 @@
     <title>Document</title>
 </head>
 <body>
+    <figure id="title-activities-style">
+        <figcaption id="figcaption-activities-style">Checkout our activities!</figcaption>
+        
+      </figure>
     <div class="background-activities">
         <table>
+           
             <tr class="line1">
+                
                 <th class="folder 1">
                     
                     <div class="folder_anh">
@@ -30,7 +36,7 @@
                                 alt="activites2" class="anh anh2"></a>
                                 
                         </div>
-                        <h3 class="line_below_img_2"> Eco smart Vietnam </h3>
+                        <h3 class="line_below_img_2"> Eco Smart Vietnam </h3>
                     
                 </th>
                 <th class="folder 3">
@@ -39,7 +45,7 @@
                         <a href="https://www.facebook.com/photo?fbid=114589198169201&set=a.109001262061328"> <img src="{{ url_for('static', filename='img/activities/activities3.jpg') }}"
                                 alt="activites3" class="anh anh3"></a>
                         </div>
-                        <h3 class="line_below_img"> HUMAN OF ECO SMART VIETNAM EP 02 </h3>
+                        <h3 class="line_below_img"> Human of Eco Smart Vietnam ep 02 </h3>
                     
                 </th>
             </tr>
@@ -58,7 +64,7 @@
                         </div>
                         <h3 class="line_below_img"> Tinh trạng hiện nay </h3>
                 </th>
-                <th class="folder 5">
+                <th class="folder 6">
                     <div class="folder_anh">
                         <a href="https://www.facebook.com/photo/?fbid=117929084501879&set=pcb.117926967835424"> <img src="{{ url_for('static', filename='img/activities/activities6.jpg') }}"
                                 alt="activites6" class="anh anh6"></a>
