--- a/project/templates/activities_content.html
+++ b/project/templates/activities_content.html
@@ -10,70 +10,59 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/activities.css') }}">
     <title>Document</title>
 </head>
+
 <body>
-    <figure id="title-activities-style">
-        <figcaption id="figcaption-activities-style">Checkout our activities!</figcaption>
-        
-      </figure>
     <div class="background-activities">
-        <table>
-           
-            <tr class="line1">
-                
-                <th class="folder 1">
-                    
-                    <div class="folder_anh">
-                    <a href="https://www.facebook.com/photo/?fbid=107995395495248&set=pcb.107563388871782"> <img src="{{ url_for('static', filename='img/activities/activities1.jpg') }}"
-                            alt="activites1" class="anh anh1"> </a>
-                         </div>
-                    <h3 class="line_below_img"> Loài người rồi sẽ ăn ngủ trên đống rác </h3>
-                
-                </th>
-                <th class="folder 2">    
-                    
-                        <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo?fbid=106068572354597&set=a.105895305705257"> <img src="{{ url_for('static', filename='img/activities/activities2.jpg') }}"
-                                alt="activites2" class="anh anh2"></a>
-                                
-                        </div>
-                        <h3 class="line_below_img_2"> Eco Smart Vietnam </h3>
-                    
-                </th>
-                <th class="folder 3">
-                   
-                        <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo?fbid=114589198169201&set=a.109001262061328"> <img src="{{ url_for('static', filename='img/activities/activities3.jpg') }}"
-                                alt="activites3" class="anh anh3"></a>
-                        </div>
-                        <h3 class="line_below_img"> Human of Eco Smart Vietnam ep 02 </h3>
-                    
-                </th>
-            </tr>
-            <tr class="line2">
-                <th class="folder 4">
-                    <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo?fbid=112881635006624&set=pcb.112882615006526"> <img src="{{ url_for('static', filename='img/activities/activities4.jpg') }}"
-                                alt="activites4" class="anh anh4"> </a>
-                        </div>
-                        <h3 class="line_below_img"> Vũ trụ có thực sự đáng sống  </h3>
-                </th>
-                <th class="folder 5">
-                    <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo?fbid=112881805006607&set=pcb.112882615006526"> <img src="{{ url_for('static', filename='img/activities/activities5.jpg') }}"
-                                alt="activites5" class="anh anh5"></a>
-                        </div>
-                        <h3 class="line_below_img"> Tinh trạng hiện nay </h3>
-                </th>
-                <th class="folder 6">
-                    <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo/?fbid=117929084501879&set=pcb.117926967835424"> <img src="{{ url_for('static', filename='img/activities/activities6.jpg') }}"
-                                alt="activites6" class="anh anh6"></a>
-                        </div>
-                        <h3 class="line_below_img"> Thông điệp vũ trụ </h3>
-                </th>
-            </tr>
-        </table>
-    </div>
-    
+
+        <figure id="title-activities-style">
+            <figcaption>Checkout our activities!</figcaption>
+        </figure>
+
+        <section id="activities_folder">
+            <div class="activities_line">
+                <div class="activities_photo">
+                    <a href="https://www.facebook.com/photo/?fbid=107995395495248&set=pcb.107563388871782"> <img src="{{ url_for('static', filename='img/activities/activities1.jpg') }}" alt="activites1" class="anh anh1"> </a>
+                    <figure class="photo_cap">
+                        <figcaption>Loài người rồi sẽ ăn ngủ trên đống rác</figcaption>
+                    </figure>
+                </div>
+
+                <div class="activities_photo">
+                    <a href="https://www.facebook.com/photo?fbid=106068572354597&set=a.105895305705257"> <img src="{{ url_for('static', filename='img/activities/activities2.jpg') }}" alt="activites2" class="anh anh2"></a>
+                    <figure class="photo_cap">
+                        <figcaption>Eco Smart Vietnam</figcaption>
+                    </figure>
+                </div>
+
+                <div class="activities_photo">
+                    <a href="https://www.facebook.com/photo?fbid=114589198169201&set=a.109001262061328"> <img src="{{ url_for('static', filename='img/activities/activities3.jpg') }}" alt="activites3" class="anh anh3"></a>
+                    <figure class="photo_cap">
+                        <figcaption>Human of Eco Smart Vietnam ep 02</figcaption>
+                    </figure>
+                </div>
+
+                <div class="activities_photo">
+                    <a href="https://www.facebook.com/photo?fbid=112881635006624&set=pcb.112882615006526"> <img src="{{ url_for('static', filename='img/activities/activities4.jpg') }}" alt="activites4" class="anh anh4"> </a>
+                    <figure class="photo_cap">
+                        <figcaption>Vũ trụ có thực sự đáng sống?</figcaption>
+                    </figure>
+                </div>
+
+                <div class="activities_photo">
+                    <a href="https://www.facebook.com/photo?fbid=112881805006607&set=pcb.112882615006526"> <img src="{{ url_for('static', filename='img/activities/activities5.jpg') }}" alt="activites5" class="anh anh5"></a>
+                    <figure class="photo_cap">
+                        <figcaption>Tình trạng hiện nay</figcaption>
+                    </figure>
+                </div>
+
+                <div class="activities_photo">
+                    <a href="https://www.facebook.com/photo/?fbid=117929084501879&set=pcb.117926967835424"> <img src="{{ url_for('static', filename='img/activities/activities6.jpg') }}" alt="activites6" class="anh anh6"></a>
+                    <figure class="photo_cap">
+                        <figcaption>Thông điệp vũ trụ</figcaption>
+                    </figure>
+                </div>
+        </section>
+        </div>
 </body>
+
 </html>
