--- a/project/templates/ourteam.html
+++ b/project/templates/ourteam.html
@@ -26,7 +26,7 @@
             <!--Anh Tri-->
             <div class="card">
                 <div class="img-container">
-                    <img src="{{ url_for('static', filename='img/aboutus/president.jpg') }}" alt="Mr Bui Dinh Tri - Founder">
+                    <img src="{{ url_for('static', filena   ='img/aboutus/president.jpg') }}" alt="Mr Bui Dinh Tri - Founder">
                 </div>
                 <h3>Bui Dinh Tri</h3>
                 <p>Founder - President</p>
