--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -71,23 +71,23 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/about-us/"
+              <a class="nav-link" aria-current="page" href="/about-us/"
                 >About us</a
               >
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/contact-us/"
+              <a class="nav-link" aria-current="page" href="/contact-us/"
                 >Contact Us</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/signin/"
+              <a class="nav-link" aria-current="page" href="/signin/"
                 >Sign in</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/signup/"
+              <a class="nav-link" aria-current="page" href="/signup/"
                 >Sign up
               </a>
             </li>
@@ -104,8 +104,8 @@
 
     <!-- JS bootstrap -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
   </body>
