--- a/project/templates/animation.html
+++ b/project/templates/animation.html
@@ -1,87 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/animation.css') }}" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
+    <title>Animation</title>
 
-<body>
-    <div class="container">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
+    <!-- <link rel="stylesheet" href="animation.css" /> -->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/animation.css') }}"
+    />
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-                <!--slide 1-->
-                <div class="item active">
-                    <img src="{{ url_for('static', filename='img/aboutus/aware1.jpg') }}" />
-                    <div class="animation-content">
-                        <p>In 10 centuries, a new plastic bottle will decompose.</p>
-                        <p>100 years from now, 1 plastic bag will leave this earth.</p>
-                        <p>But...</p>
-                        <p>Humanity discharges 3.5 million tons of garbage every day.</p>
-                        <p>Each year, Vietnamese people emit about 1.8 million tons of plastic waste.</p>
-                    </div>
-                </div>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="myContainer">
+      <div id="carouselMain" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators" id="indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselMain"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
 
-                <!--slide 2-->
-                <div class="item">
-                    <img src="{{ url_for('static', filename='img/aboutus/aware2.jpg') }}" />
-                    <div class="animation-content">
-                        <p>If now, inaction, then when?</p>
-                        <p>A few years later, when that pile of garbage has not yet decomposed, will humanity eat on the garbage heap, sleep on the garbage pile, and drown in the ocean of garbage?</p>
-                    </div>
-                </div>
+          <button
+            type="button"
+            data-bs-target="#carouselMain"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
 
-                <!--slide 3-->
-                <div class="item">
-                    <img src="{{ url_for('static', filename='img/aboutus/mission.jpg') }}" />
-                    <div class="animation-content">
-                        <p>Eco Smart VietNam is committed to 2 main MISSIONS and VISIONS:</p>
-                        <p>- Raising Vietnamese awareness of environmental protection activities</p>
-                        <p>- Promote the development of eco friendly products.</p>
-                        <p>With CORE VALUES:</p>
-                        <p>- Effectiveness: Actionable results.</p>
-                        <p>- Respect: Listening, sincerity and humility</p>
-                        <p>- Professionalism: Discipline, professionalism and quality</p>
-                    </div>
-                </div>
+          <button
+            type="button"
+            data-bs-target="#carouselMain"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
 
-                <!--slide 4-->
-                <div class="item">
-                    <img src="{{ url_for('static', filename='img/aboutus/history.jpg') }}" />
-                    <div class="animation-content">
-                        <p>With those things, ECO SMART VIETNAM was born.</p>
-                        <p>In 2022-2024, Eco Smart VietNam operates with the vision of becoming one of the leading active student organizations in the North acting for the environment. In particular, ESV is a pioneer in promoting the development of environmentally
-                            friendly products.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
+          <button
+            type="button"
+            data-bs-target="#carouselMain"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
         </div>
-    </div>
-</body>
 
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <!-- <img src="aware1.jpg" class="d-block" alt="..." /> -->
+
+            <img
+              src="{{ url_for('static', filename='img/aboutus/aware1.jpg') }}"
+              class="d-block"
+            />
+            <div class="animation-content">
+              <p>In 10 centuries, a new plastic bottle will decompose.</p>
+              <p>100 years from now, 1 plastic bag will leave this earth.</p>
+              <p>But...</p>
+              <p>Humanity discharges 3.5 million tons of garbage every day.</p>
+              <p>
+                Each year, Vietnamese people emit about 1.8 million tons of
+                plastic waste.
+              </p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <!-- <img src="aware2.jpg" class="d-block" alt="..." /> -->
+            <img
+              src="{{ url_for('static', filename='img/aboutus/aware2.jpg') }}"
+              class="d-block"
+            />
+            <div class="animation-content">
+              <p>If now, inaction, then when?</p>
+              <p>
+                A few years later, when that pile of garbage has not yet
+                decomposed, will humanity eat on the garbage heap, sleep on the
+                garbage pile, and drown in the ocean of garbage?
+              </p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <!-- <img src="mission.jpg" class="d-block" alt="..." /> -->
+            <img
+              src="{{ url_for('static', filename='img/aboutus/mission.jpg') }}"
+              class="d-block"
+            />
+            <div class="animation-content">
+              <p>
+                Eco Smart VietNam is committed to 2 main MISSIONS and VISIONS:
+              </p>
+              <p>
+                - Raising Vietnamese awareness of environmental protection
+                activities
+              </p>
+              <p>- Promote the development of eco friendly products.</p>
+              <p>With CORE VALUES:</p>
+              <p>- Effectiveness: Actionable results.</p>
+              <p>- Respect: Listening, sincerity and humility</p>
+              <p>- Professionalism: Discipline, professionalism and quality</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <!-- <img src="history.jpg" class="d-block" alt="..." /> -->
+            <img
+              src="{{ url_for('static', filename='img/aboutus/history.jpg') }}"
+              class="d-block"
+            />
+            <div class="animation-content">
+              <p>With those things, ECO SMART VIETNAM was born.</p>
+              <p>
+                In 2022-2024, Eco Smart VietNam operates with the vision of
+                becoming one of the leading active student organizations in the
+                North acting for the environment. In particular, ESV is a
+                pioneer in promoting the development of environmentally friendly
+                products.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselMain"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselMain"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
