sua activities.html

--- a/project/templates/activities.html
+++ b/project/templates/activities.html
@@ -110,10 +110,11 @@
                         <a href="https://www.facebook.com/photo?fbid=126644343630353&set=a.105895305705257" class="text3"> Read More</a>
                     </div>
                   </div>
-            
-             
 
- {% include 'footer.html' %}
+            </div>
+        </div>
+            
+    {% include 'footer.html' %}
 </body>
 
 </html>
