--- a/project/templates/activities.html
+++ b/project/templates/activities.html
@@ -16,7 +16,6 @@
 <body>
     {% include 'navbar.html' %}
  
-
             <div id="activities_news">
                 <div class="content_block">
             
@@ -31,7 +30,8 @@
                     <span class="text2"> Liệu bạn có biết mùa Tết của “Công dân toàn cầu” có gì khác biệt? Nếu là người dân Việt Nam chắc hẳn bạn cũng chẳng xa lạ gì với các nghi thức truyền thống như dọn dẹp, lì xì, nấu bánh chưng, tảo mộ,...
                     </span>
                     <div class="readmore">
-                       <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid0kH4rnxhLiHesvXGJsoscLg1qTBYNUBHfFpZtGwvXkQVVoadSEkaEHuQt729o9APRl" class="text3"> Read More</a>
+                       <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid0kH4rnxhLiHesvXGJsoscLg1qTBYNUBHfFpZtGwvXkQVVoadSEkaEHuQt729o9APRl"
+                        class="text3"> Read More</a>
                     </div>
                   </div>
             
