--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}" />
+<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 <div class="background_footer">
     <p class="footer-style">
         All rights reserved by
@@ -9,3 +10,35 @@
         <a href="https://www.instagram.com/ecosmart.vietnam/"><img class="footerimages" src="{{ url_for('static', filename='img/footer/ins.gif') }}" alt="" /></a>
     </div>
 </div>
+    <script>
+      $ (window).on("load",function(){
+        $(".loader").fadeOut("slow");
+      })
+
+    </script>
+    <style>
+      .loader{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: azure;
+        transition: opacity 2s, visibility 2s;
+    }
+    </style>
+  
+  <div class="loader">
+      <div class="spinner-grow text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-secondary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
