Edit picture in our team file

--- a/project/templates/ourteam.html
+++ b/project/templates/ourteam.html
@@ -149,7 +149,7 @@
             <!--Ninh Giang-->
             <div class="card">
                 <div class="img-container">
-                    <img src="{{ url_for('static', filename='img/aboutus/viceit_1.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                    <img src="{{ url_for('static', filename='img/aboutus/viceit_1.jpg') }}" alt="Giang Pham">
                 </div>
                 <h3>Pham Ninh Giang</h3>
                 <p>Vice Head of IT</p>
